--- a/JS/DOM/one.html
+++ b/JS/DOM/one.html
@@ -4,12 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DOM Learning</title>
+    <style>
+        .bg-black{
+            background-color:black;
+            color: #fff;
+        }
+    </style>
 </head>
-<body>
-    <div class="bg-black">
-        <h1 id="title" class="heading">Dom Learning</h1>
+<body class="bg-black">
+    <div>
+        <h1 id="title" class="heading">Dom Learning
+            <span style="display:none;">Testing test</span>
+        </h1>
         <p>Lorem ipsum dolor sit amet. </p>
     </div>
+
+    <ul>
+        <li>l1</li>
+        <li>l2</li>
+        <li>l3</li>
+    </ul>
 
 </body>
 </html>
