--- a/JS/DOM/one.html
+++ b/JS/DOM/one.html
@@ -25,5 +25,12 @@
         <li>l3</li>
     </ul>
 
+    <ul>
+        <li class="list-items">one</li>
+        <li class="list-items">two</li>
+        <li class="list-items">three</li>
+        <li class="list-items">four</li>
+    </ul>
+
 </body>
 </html>
