added new DOM files

--- a/JS/DOM/two.html
+++ b/JS/DOM/two.html
@@ -30,6 +30,6 @@
     const dayOne = document.querySelector(".day")
     console.log(dayOne);
     console.log(dayOne.parentElement);
-    console.log(dayOne.);
+    console.log(dayOne.nextElementSibling);
     </script>
 </html>
