--- a/JS/DOM/three.html
+++ b/JS/DOM/three.html
@@ -10,12 +10,23 @@
     
 </body>
 <script>
-    const div = document.createElement('div');
+    //important part
+    function createDiv(numDivs){
+        for(let i=0;i<numDivs;i++){
+            const div = document.createElement('div');
     console.log(div);
     div.className="main"
     div.id=Math.round(Math.random()*10+1)
-    div.setAttribute=("title","main-title")
+    div.setAttribute("title","main-title")
+    div.setAttribute("id","different")
     div.style.backgroundColor="green"
     div.style.padding="12px"
+    const addText = document.createTextNode("Hello World")
+    div.appendChild(addText)
+    document.body.appendChild(div)
+        }
+    }
+  
+  createDiv(2); 
 </script>
 </html>
