--- a/JS/Events/one.html
+++ b/JS/Events/one.html
@@ -49,12 +49,12 @@
     //     e.stopPropagation();
     // },false)
 
-    // document.getElementById('google').addEventListener('click',function(e){
-    //     e.preventDefault();
-    //     e.stopPropagation(); //this will stop bubbling as well
-    //     console.log("Clicked on google");
+    document.getElementById('google').addEventListener('click',function(e){
+        e.preventDefault();
+        e.stopPropagation(); //this will stop bubbling as well
+        console.log("Clicked on google");
       
-    // },false)
+    },false)
 
     document.querySelector('#images').addEventListener('click',function(e){
         // console.log(e.target);  //kis target se a ra hai
