--- a/JS/_event/one.html
+++ b/JS/_event/one.html
@@ -49,23 +49,22 @@
     //     e.stopPropagation();
     // },false)
 
-    document.getElementById('google').addEventListener('click',function(e){
-        e.preventDefault();
-        e.stopPropagation(); //this will stop bubbling as well
-        console.log("Clicked on google");
+    // document.getElementById('google').addEventListener('click',function(e){
+    //     e.preventDefault();
+    //     e.stopPropagation(); //this will stop bubbling as well
+    //     console.log("Clicked on google");
       
-    },false)
+    // },false)
 
     document.querySelector('#images').addEventListener('click',function(e){
         // console.log(e.target);  //kis target se a ra hai
         // console.log(e.target.parentNode);
-        console.log(e.target.tagName);  //iIMG LI
+        console.log(e.target.tagName);  //IMG LI
         if(e.target.tagName==='IMG'){
             let removeIt = e.target.parentNode;
             removeIt.remove()
         // removeIt.parentNode.removeChild(removeIt)
-        }
-        
+        }  
     })
 
 </script>
