--- a/JS/_event/two.html
+++ b/JS/_event/two.html
@@ -9,6 +9,7 @@
     
     <h1>Chirag</h1>
     <button id="stop">Stop</button>
+    <div id="para"></div>
 </body>
 <script>
     // setTimeout(function(){
