Some more questions

--- a/JS/Interview/confirm.html
+++ b/JS/Interview/confirm.html
@@ -6,7 +6,7 @@
     <title>Form Confirmation</title>
 </head>
 <body>
-    <form onsubmit="return confirmSubmission()">
+    <form onsubmit="confirmSubmission()">
         <input type="text" name="username" required>
         <button type="submit">Submit</button>
     </form>
